# SplitSound-Desktop

./: .codecov.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  .vsts.yml  CMakeLists.txt  README.md  appveyor.yml  installOpenCppCoverage.ps1  test  test.ps1  test.sh
cmake/: Qt5.cmake  SplitSound.cmake  Testing.cmake
src/gui/: CMakeLists.txt
src/gui/res/: Constants.js  CustomLabel.qml  CustomProgressBar.qml  DefaultDialog.qml  HoverToolTip.qml  IconLabel.qml  InputSettings.qml  Label.qml  LeftPanel.qml  ListeningUser.qml  Modal.qml  OverflowToolTip.qml  ServerList.qml  ServerListAvailable.qml  ServerListDelegate.qml  ServerListJoined.qml  ServerListModel.qml  ServerSearch.qml  Settings.qml  SettingsRow.qml  SplitSound.qrc  UserList.qml  main.qml
src/gui/res/logos/osx/: center-circle.hqx  headphones-accent.hqx  headphones.hqx
src/gui/res/logos/windows/: SplitSound.rc
src/gui/src/: MainWindow.cpp  MainWindow.h  QQmlBridge.cpp  QQmlBridge.h  QQmlSettingsBridge.cpp  QQmlSettingsBridge.h  QSplitSoundApplication.cpp  QSplitSoundApplication.h  main.cpp  qml.qrc
src/helloworld/: CMakeLists.txt
src/helloworld/src/: Test.cpp  Test.h  test.cpp
src/net/: BroadcastAddress.cpp  BroadcastAddress.h  Buffer.h  CMakeLists.txt  QRTPSession.cpp  QRTPSession.h  RTCPSessionTask.cpp  RTCPSessionTask.h  RTPNetworking.cpp  RTPNetworking.h  RTPReceiverTask.cpp  RTPReceiverTask.h  SplitSoundRTPSession.cpp  SplitSoundRTPSession.h  output
src/test/basic/: TestQuickMaths.cpp
src/test/gui/: TestGui.cpp
src/test/networking/: TestBroad.cpp
